--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       }
       
       #root {
-        min-height: 100vh;
+        min-height: 100dvh;
         background-color: var(--background);
       }
     </style>
